[gd_scene load_steps=111 format=2]

[ext_resource path="res://Background/house.png" type="Texture" id=1]
[ext_resource path="res://Sounds/the_past_8_bit_lofi_.ogg" type="AudioStream" id=2]
[ext_resource path="res://Player/Idle/transparent (1).png" type="Texture" id=3]
[ext_resource path="res://Player/Idle/transparent (4).png" type="Texture" id=4]
[ext_resource path="res://Player/Idle/transparent (5).png" type="Texture" id=5]
[ext_resource path="res://Player/Idle/transparent (2).png" type="Texture" id=6]
[ext_resource path="res://Player/Idle/transparent (3).png" type="Texture" id=7]
[ext_resource path="res://Font/yoster-island.regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/MainScene.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Back button.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Feed button.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Play button.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Clean button.gd" type="Script" id=13]
[ext_resource path="res://Player/Feed/transparent (2).png" type="Texture" id=14]
[ext_resource path="res://Player/Feed/transparent (5).png" type="Texture" id=15]
[ext_resource path="res://Player/Feed/transparent (4).png" type="Texture" id=16]
[ext_resource path="res://Player/Feed/transparent (6).png" type="Texture" id=17]
[ext_resource path="res://Player/Feed/transparent (3).png" type="Texture" id=18]
[ext_resource path="res://Player/Feed/transparent (1).png" type="Texture" id=19]
[ext_resource path="res://Player/Jump/transparent (9).png" type="Texture" id=20]
[ext_resource path="res://Player/Jump/transparent (10).png" type="Texture" id=21]
[ext_resource path="res://Player/Jump/transparent (12).png" type="Texture" id=22]
[ext_resource path="res://Player/Jump/transparent (8).png" type="Texture" id=23]
[ext_resource path="res://Player/Jump/transparent (5).png" type="Texture" id=24]
[ext_resource path="res://Player/Jump/transparent (1).png" type="Texture" id=25]
[ext_resource path="res://Player/Jump/transparent (3).png" type="Texture" id=26]
[ext_resource path="res://Player/Jump/transparent (4).png" type="Texture" id=27]
[ext_resource path="res://Player/Jump/transparent (6).png" type="Texture" id=28]
[ext_resource path="res://Player/Jump/transparent (2).png" type="Texture" id=29]
[ext_resource path="res://Player/Jump/transparent (7).png" type="Texture" id=30]
[ext_resource path="res://Player/Jump/transparent (11).png" type="Texture" id=31]
[ext_resource path="res://Player/Clean/transparent (3).png" type="Texture" id=32]
[ext_resource path="res://Player/Clean/transparent (4).png" type="Texture" id=33]
[ext_resource path="res://Player/Clean/transparent (1).png" type="Texture" id=34]
[ext_resource path="res://Player/Clean/transparent (5).png" type="Texture" id=35]
[ext_resource path="res://Player/Clean/transparent (2).png" type="Texture" id=36]
[ext_resource path="res://Sounds/feed.ogg" type="AudioStream" id=37]
[ext_resource path="res://Sounds/clean.ogg" type="AudioStream" id=38]
[ext_resource path="res://Sounds/jump.ogg" type="AudioStream" id=39]
[ext_resource path="res://Player/Idle/black (1).png" type="Texture" id=40]
[ext_resource path="res://Player/Idle/black (5).png" type="Texture" id=41]
[ext_resource path="res://Player/Idle/black (4).png" type="Texture" id=42]
[ext_resource path="res://Player/Idle/black (3).png" type="Texture" id=43]
[ext_resource path="res://Player/Idle/black (2).png" type="Texture" id=44]
[ext_resource path="res://Player/Jump/black (3).png" type="Texture" id=45]
[ext_resource path="res://Player/Jump/black (5).png" type="Texture" id=46]
[ext_resource path="res://Player/Jump/black (12).png" type="Texture" id=47]
[ext_resource path="res://Player/Jump/black (7).png" type="Texture" id=48]
[ext_resource path="res://Player/Jump/black (1).png" type="Texture" id=49]
[ext_resource path="res://Player/Jump/black (2).png" type="Texture" id=50]
[ext_resource path="res://Player/Jump/black (4).png" type="Texture" id=51]
[ext_resource path="res://Player/Jump/black (8).png" type="Texture" id=52]
[ext_resource path="res://Player/Jump/black (9).png" type="Texture" id=53]
[ext_resource path="res://Player/Jump/black (6).png" type="Texture" id=54]
[ext_resource path="res://Player/Jump/black (11).png" type="Texture" id=55]
[ext_resource path="res://Player/Jump/black (10).png" type="Texture" id=56]
[ext_resource path="res://Player/Feed/black (3).png" type="Texture" id=57]
[ext_resource path="res://Player/Feed/black (2).png" type="Texture" id=58]
[ext_resource path="res://Player/Feed/black (1).png" type="Texture" id=59]
[ext_resource path="res://Player/Feed/black (6).png" type="Texture" id=60]
[ext_resource path="res://Player/Feed/black (5).png" type="Texture" id=61]
[ext_resource path="res://Player/Feed/black (4).png" type="Texture" id=62]
[ext_resource path="res://Player/Clean/black (4).png" type="Texture" id=63]
[ext_resource path="res://Player/Clean/black (1).png" type="Texture" id=64]
[ext_resource path="res://Player/Clean/black (5).png" type="Texture" id=65]
[ext_resource path="res://Player/Clean/black (2).png" type="Texture" id=66]
[ext_resource path="res://Player/Clean/black (3).png" type="Texture" id=67]
[ext_resource path="res://Player/Idle/blue (4).png" type="Texture" id=68]
[ext_resource path="res://Player/Idle/blue (5).png" type="Texture" id=69]
[ext_resource path="res://Player/Idle/blue (3).png" type="Texture" id=70]
[ext_resource path="res://Player/Idle/blue (1).png" type="Texture" id=71]
[ext_resource path="res://Player/Idle/blue (2).png" type="Texture" id=72]
[ext_resource path="res://Player/Jump/blue (7).png" type="Texture" id=73]
[ext_resource path="res://Player/Jump/blue (2).png" type="Texture" id=74]
[ext_resource path="res://Player/Jump/blue (12).png" type="Texture" id=75]
[ext_resource path="res://Player/Jump/blue (9).png" type="Texture" id=76]
[ext_resource path="res://Player/Jump/blue (6).png" type="Texture" id=77]
[ext_resource path="res://Player/Jump/blue (4).png" type="Texture" id=78]
[ext_resource path="res://Player/Jump/blue (5).png" type="Texture" id=79]
[ext_resource path="res://Player/Jump/blue (8).png" type="Texture" id=80]
[ext_resource path="res://Player/Jump/blue (10).png" type="Texture" id=81]
[ext_resource path="res://Player/Jump/blue (3).png" type="Texture" id=82]
[ext_resource path="res://Player/Jump/blue (1).png" type="Texture" id=83]
[ext_resource path="res://Player/Jump/blue (11).png" type="Texture" id=84]
[ext_resource path="res://Player/Clean/blue (1).png" type="Texture" id=85]
[ext_resource path="res://Player/Clean/blue (2).png" type="Texture" id=86]
[ext_resource path="res://Player/Clean/blue (3).png" type="Texture" id=87]
[ext_resource path="res://Player/Clean/blue (4).png" type="Texture" id=88]
[ext_resource path="res://Player/Clean/blue (5).png" type="Texture" id=89]
[ext_resource path="res://Player/Feed/blue (2).png" type="Texture" id=90]
[ext_resource path="res://Player/Feed/blue (4).png" type="Texture" id=91]
[ext_resource path="res://Player/Feed/blue (5).png" type="Texture" id=92]
[ext_resource path="res://Player/Feed/blue (1).png" type="Texture" id=93]
[ext_resource path="res://Player/Feed/blue (3).png" type="Texture" id=94]
[ext_resource path="res://Player/Feed/blue (6).png" type="Texture" id=95]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ) ],
"loop": true,
"name": "Feed",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 45 ), ExtResource( 51 ), ExtResource( 46 ), ExtResource( 54 ), ExtResource( 48 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 47 ) ],
"loop": true,
"name": "PlayBlack",
"speed": 7.5
}, {
"frames": [ ExtResource( 40 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 41 ) ],
"loop": true,
"name": "IdleBlack",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 58 ), ExtResource( 57 ), ExtResource( 62 ), ExtResource( 61 ), ExtResource( 60 ) ],
"loop": true,
"name": "FeedBlack",
"speed": 5.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 63 ), ExtResource( 65 ) ],
"loop": true,
"name": "CleanBlack",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 35 ) ],
"loop": true,
"name": "Clean",
"speed": 5.0
}, {
"frames": [ ExtResource( 93 ), ExtResource( 90 ), ExtResource( 94 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 95 ) ],
"loop": true,
"name": "FeedBlue",
"speed": 5.0
}, {
"frames": [ ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ) ],
"loop": true,
"name": "CleanBlue",
"speed": 5.0
}, {
"frames": [ ExtResource( 83 ), ExtResource( 74 ), ExtResource( 82 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 77 ), ExtResource( 73 ), ExtResource( 80 ), ExtResource( 76 ), ExtResource( 81 ), ExtResource( 84 ), ExtResource( 75 ) ],
"loop": true,
"name": "PlayBlue",
"speed": 7.5
}, {
"frames": [ ExtResource( 71 ), ExtResource( 72 ), ExtResource( 70 ), ExtResource( 68 ), ExtResource( 69 ) ],
"loop": true,
"name": "IdleBlue",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 31 ), ExtResource( 22 ) ],
"loop": true,
"name": "Play",
"speed": 7.5
} ]

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Font/VCR_OSD_MONO_1.001.ttf"

[sub_resource type="DynamicFont" id=11]
size = 25
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Font/yoster-island.regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 8 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Font/yoster-island.regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Font/yoster-island.regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = SubResource( 8 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="DynamicFont" id=12]
size = 25
font_data = ExtResource( 8 )

[node name="Main Scene" type="Node2D"]
script = ExtResource( 9 )

[node name="House" type="Sprite" parent="."]
position = Vector2( 512, 296 )
scale = Vector2( 6.4, 6.25 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
autoplay = true

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 512, 440 )
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "CleanBlue"
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="feedSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 37 )
volume_db = -15.0

[node name="playSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 39 )

[node name="cleanSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 38 )
volume_db = -15.0

[node name="Level" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 8.0
margin_right = 544.0
margin_bottom = 42.0
custom_fonts/normal_font = SubResource( 2 )
text = "Level: 0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Food" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 40.0
margin_right = 168.0
margin_bottom = 74.0
custom_fonts/normal_font = SubResource( 2 )
text = "Food: 100"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Mood" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 72.0
margin_right = 168.0
margin_bottom = 102.0
custom_fonts/normal_font = SubResource( 2 )
text = "Mood: 100"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Clean" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 104.0
margin_right = 176.0
margin_bottom = 140.0
custom_fonts/normal_font = SubResource( 2 )
text = "Clean: 100"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="%" type="Label" parent="."]
margin_left = 156.0
margin_top = 40.0
margin_right = 196.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 11 )
text = "%"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="%2" type="Label" parent="."]
margin_left = 156.0
margin_top = 72.0
margin_right = 196.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 11 )
text = "%"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="%3" type="Label" parent="."]
margin_left = 160.0
margin_top = 104.0
margin_right = 200.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 11 )
text = "%"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Date" type="RichTextLabel" parent="."]
margin_left = 752.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 42.0
custom_fonts/normal_font = SubResource( 2 )
text = "Date: 01-01-1970"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Time" type="RichTextLabel" parent="."]
margin_left = 800.0
margin_top = 40.0
margin_right = 976.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 4 )
text = "00:00:00 AM"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Day" type="RichTextLabel" parent="."]
margin_left = 840.0
margin_top = 72.0
margin_right = 995.0
margin_bottom = 108.0
custom_fonts/normal_font = SubResource( 2 )
text = "Day: 0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Feed button" type="Button" parent="."]
margin_left = 336.0
margin_top = 536.0
margin_right = 432.0
margin_bottom = 584.0
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Feed text" type="Label" parent="Feed button"]
margin_left = 16.0
margin_top = 8.0
margin_right = 80.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 5 )
text = "Feed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play button" type="Button" parent="."]
margin_left = 464.0
margin_top = 536.0
margin_right = 560.0
margin_bottom = 584.0
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Play text" type="Label" parent="Play button"]
margin_left = 16.0
margin_top = 8.0
margin_right = 80.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 7 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clean button" type="Button" parent="."]
margin_left = 592.0
margin_top = 536.0
margin_right = 688.0
margin_bottom = 584.0
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Clean text" type="Label" parent="Clean button"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 9 )
text = "Clean"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back button" type="Button" parent="."]
margin_left = 880.0
margin_top = 536.0
margin_right = 976.0
margin_bottom = 576.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Back Text" type="Label" parent="Back button"]
margin_right = 96.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 12 )
text = "< Back"
align = 1
valign = 1
[connection signal="animation_finished" from="Player" to="." method="_on_Player_animation_finished"]
[connection signal="pressed" from="Feed button" to="Feed button" method="_on_Feed_button_pressed"]
[connection signal="pressed" from="Play button" to="Play button" method="_on_Play_button_pressed"]
[connection signal="pressed" from="Clean button" to="Clean button" method="_on_Clean_button_pressed"]
[connection signal="pressed" from="Back button" to="Back button" method="_on_Back_button_pressed"]
